flutter_seekserve/lib/src/bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names
// AUTO-GENERATED — do not edit. Regenerate with `dart run ffigen`.

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for SeekServe C API (`seekserve_c.h`).
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class SeekServeBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  SeekServeBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  SeekServeBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  ffi.Pointer<SeekServeEngine> ss_engine_create(
    ffi.Pointer<ffi.Char> config_json,
  ) {
    return _ss_engine_create(config_json);
  }

  late final _ss_engine_createPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<SeekServeEngine> Function(ffi.Pointer<ffi.Char>)
        >
      >('ss_engine_create');
  late final _ss_engine_create = _ss_engine_createPtr
      .asFunction<
        ffi.Pointer<SeekServeEngine> Function(ffi.Pointer<ffi.Char>)
      >();

  void ss_engine_destroy(ffi.Pointer<SeekServeEngine> engine) {
    return _ss_engine_destroy(engine);
  }

  late final _ss_engine_destroyPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<SeekServeEngine>)>
      >('ss_engine_destroy');
  late final _ss_engine_destroy = _ss_engine_destroyPtr
      .asFunction<void Function(ffi.Pointer<SeekServeEngine>)>();

  int ss_add_torrent(
    ffi.Pointer<SeekServeEngine> engine,
    ffi.Pointer<ffi.Char> uri,
    ffi.Pointer<ffi.Char> out_torrent_id,
    int out_torrent_id_len,
  ) {
    return _ss_add_torrent(engine, uri, out_torrent_id, out_torrent_id_len);
  }

  late final _ss_add_torrentPtr =
      _lookup<
        ffi.NativeFunction<
          ss_error_t Function(
            ffi.Pointer<SeekServeEngine>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Int32,
          )
        >
      >('ss_add_torrent');
  late final _ss_add_torrent = _ss_add_torrentPtr
      .asFunction<
        int Function(
          ffi.Pointer<SeekServeEngine>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
        )
      >();

  int ss_remove_torrent(
    ffi.Pointer<SeekServeEngine> engine,
    ffi.Pointer<ffi.Char> torrent_id,
    bool delete_files,
  ) {
    return _ss_remove_torrent(engine, torrent_id, delete_files);
  }

  late final _ss_remove_torrentPtr =
      _lookup<
        ffi.NativeFunction<
          ss_error_t Function(
            ffi.Pointer<SeekServeEngine>,
            ffi.Pointer<ffi.Char>,
            ffi.Bool,
          )
        >
      >('ss_remove_torrent');
  late final _ss_remove_torrent = _ss_remove_torrentPtr
      .asFunction<
        int Function(ffi.Pointer<SeekServeEngine>, ffi.Pointer<ffi.Char>, bool)
      >();

  int ss_list_torrents(
    ffi.Pointer<SeekServeEngine> engine,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_json,
  ) {
    return _ss_list_torrents(engine, out_json);
  }

  late final _ss_list_torrentsPtr =
      _lookup<
        ffi.NativeFunction<
          ss_error_t Function(
            ffi.Pointer<SeekServeEngine>,
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
          )
        >
      >('ss_list_torrents');
  late final _ss_list_torrents = _ss_list_torrentsPtr
      .asFunction<
        int Function(
          ffi.Pointer<SeekServeEngine>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
        )
      >();

  int ss_list_files(
    ffi.Pointer<SeekServeEngine> engine,
    ffi.Pointer<ffi.Char> torrent_id,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_json,
  ) {
    return _ss_list_files(engine, torrent_id, out_json);
  }

  late final _ss_list_filesPtr =
      _lookup<
        ffi.NativeFunction<
          ss_error_t Function(
            ffi.Pointer<SeekServeEngine>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
          )
        >
      >('ss_list_files');
  late final _ss_list_files = _ss_list_filesPtr
      .asFunction<
        int Function(
          ffi.Pointer<SeekServeEngine>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
        )
      >();

  int ss_select_file(
    ffi.Pointer<SeekServeEngine> engine,
    ffi.Pointer<ffi.Char> torrent_id,
    int file_index,
  ) {
    return _ss_select_file(engine, torrent_id, file_index);
  }

  late final _ss_select_filePtr =
      _lookup<
        ffi.NativeFunction<
          ss_error_t Function(
            ffi.Pointer<SeekServeEngine>,
            ffi.Pointer<ffi.Char>,
            ffi.Int32,
          )
        >
      >('ss_select_file');
  late final _ss_select_file = _ss_select_filePtr
      .asFunction<
        int Function(ffi.Pointer<SeekServeEngine>, ffi.Pointer<ffi.Char>, int)
      >();

  int ss_get_stream_url(
    ffi.Pointer<SeekServeEngine> engine,
    ffi.Pointer<ffi.Char> torrent_id,
    int file_index,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_url,
  ) {
    return _ss_get_stream_url(engine, torrent_id, file_index, out_url);
  }

  late final _ss_get_stream_urlPtr =
      _lookup<
        ffi.NativeFunction<
          ss_error_t Function(
            ffi.Pointer<SeekServeEngine>,
            ffi.Pointer<ffi.Char>,
            ffi.Int32,
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
          )
        >
      >('ss_get_stream_url');
  late final _ss_get_stream_url = _ss_get_stream_urlPtr
      .asFunction<
        int Function(
          ffi.Pointer<SeekServeEngine>,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
        )
      >();

  int ss_get_status(
    ffi.Pointer<SeekServeEngine> engine,
    ffi.Pointer<ffi.Char> torrent_id,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_json,
  ) {
    return _ss_get_status(engine, torrent_id, out_json);
  }

  late final _ss_get_statusPtr =
      _lookup<
        ffi.NativeFunction<
          ss_error_t Function(
            ffi.Pointer<SeekServeEngine>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
          )
        >
      >('ss_get_status');
  late final _ss_get_status = _ss_get_statusPtr
      .asFunction<
        int Function(
          ffi.Pointer<SeekServeEngine>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
        )
      >();

  int ss_set_event_callback(
    ffi.Pointer<SeekServeEngine> engine,
    ss_event_callback_t callback,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    return _ss_set_event_callback(engine, callback, user_data);
  }

  late final _ss_set_event_callbackPtr =
      _lookup<
        ffi.NativeFunction<
          ss_error_t Function(
            ffi.Pointer<SeekServeEngine>,
            ss_event_callback_t,
            ffi.Pointer<ffi.Void>,
          )
        >
      >('ss_set_event_callback');
  late final _ss_set_event_callback = _ss_set_event_callbackPtr
      .asFunction<
        int Function(
          ffi.Pointer<SeekServeEngine>,
          ss_event_callback_t,
          ffi.Pointer<ffi.Void>,
        )
      >();

  int ss_start_server(
    ffi.Pointer<SeekServeEngine> engine,
    int port,
    ffi.Pointer<ffi.Uint16> out_port,
  ) {
    return _ss_start_server(engine, port, out_port);
  }

  late final _ss_start_serverPtr =
      _lookup<
        ffi.NativeFunction<
          ss_error_t Function(
            ffi.Pointer<SeekServeEngine>,
            ffi.Uint16,
            ffi.Pointer<ffi.Uint16>,
          )
        >
      >('ss_start_server');
  late final _ss_start_server = _ss_start_serverPtr
      .asFunction<
        int Function(ffi.Pointer<SeekServeEngine>, int, ffi.Pointer<ffi.Uint16>)
      >();

  int ss_stop_server(ffi.Pointer<SeekServeEngine> engine) {
    return _ss_stop_server(engine);
  }

  late final _ss_stop_serverPtr =
      _lookup<
        ffi.NativeFunction<ss_error_t Function(ffi.Pointer<SeekServeEngine>)>
      >('ss_stop_server');
  late final _ss_stop_server = _ss_stop_serverPtr
      .asFunction<int Function(ffi.Pointer<SeekServeEngine>)>();

  void ss_free_string(ffi.Pointer<ffi.Char> str) {
    return _ss_free_string(str);
  }

  late final _ss_free_stringPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'ss_free_string',
      );
  late final _ss_free_string = _ss_free_stringPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();
}

final class SeekServeEngine extends ffi.Opaque {}

typedef ss_error_t = ffi.Int32;
typedef Dartss_error_t = int;
typedef ss_event_callback_t =
    ffi.Pointer<ffi.NativeFunction<ss_event_callback_tFunction>>;
typedef ss_event_callback_tFunction =
    ffi.Void Function(
      ffi.Pointer<ffi.Char> event_json,
      ffi.Pointer<ffi.Void> user_data,
    );
typedef Dartss_event_callback_tFunction =
    void Function(
      ffi.Pointer<ffi.Char> event_json,
      ffi.Pointer<ffi.Void> user_data,
    );

const int SS_OK = 0;

const int SS_ERR_INVALID_ARG = -1;

const int SS_ERR_NOT_FOUND = -2;

const int SS_ERR_METADATA_PENDING = -3;

const int SS_ERR_TIMEOUT = -4;

const int SS_ERR_IO = -5;

const int SS_ERR_ALREADY_RUNNING = -6;

const int SS_ERR_CANCELLED = -7;
